# rustines

./: .atom-build.json  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  launcher.bat  prek.toml  run.sh
crates/pixels_tries/: Cargo.toml
crates/pixels_tries/src/: main.rs  utils.rs
crates/rustines/: Cargo.toml
crates/rustines/src/: context.rs  main.rs  renderer.rs
crates/rustines_core/: Cargo.toml
crates/rustines_core/src/: lib.rs  renderer.rs
crates/rustines_core/src/arch/: bus.rs  common.rs  controller.rs  cpu.rs  debug_utils.rs  mod.rs  ppu.rs  registers.rs  rom_structs.rs
crates/rustines_core/src/arch/arch_tests/: branches_test.rs  decode_test.rs  flags_test.rs  lda_test.rs  mod.rs  pushpop_test.rs  test_common.rs
crates/rustines_core/src/arch/instrs/: adc.rs  and.rs  asl.rs  bit.rs  branches.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  flags.rs  inc.rs  instr_table.rs  jmp.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  mod.rs  ora.rs  others.rs  pushpop.rs  rol.rs  ror.rs  sbc.rs  sta.rs  stx.rs  sty.rs  subroutines.rs
crates/rustines_core/src/arch/mappers/: mapper.rs  mapper_0.rs
crates/rustines_core/src/loaders/: flat_loader.rs  loader.rs  zip_loader.rs
crates/rustines_core/src/utils/: bit_utils.rs
crates/rustines_debug_commands/: Cargo.toml
crates/rustines_debug_commands/src/: main.rs
crates/rustines_gui_utils/: Cargo.toml
crates/rustines_gui_utils/src/: lib.rs
crates/rustines_macro/src/: lib.rs
rustines/: Cargo.toml
rustines/src/: context.rs  main.rs  renderer.rs
rustines/src/arch/: cpu.rs  memory.rs  mod.rs  registers.rs  rom_structs.rs
rustines/src/arch/arch_tests/: branches_test.rs  common.rs  decode_test.rs  flags_test.rs  lda_test.rs  mod.rs  pushpop_test.rs
rustines/src/arch/instrs/: adc.rs  and.rs  asl.rs  bit.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  eor.rs  flags.rs  inc.rs  instr_table.rs  jmp.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  mod.rs  ora.rs  others.rs  rol.rs  ror.rs  sbc.rs  sta.rs  stx.rs  sty.rs  subroutines.rs
rustines/src/arch/mappers/: mapper.rs  mapper_0.rs
rustines/src/loaders/: flat_loader.rs  loader.rs  loaders_factory.rs  mod.rs  zip_loader.rs
rustines/src/utils/: mod.rs
rustines_core/: Cargo.toml
rustines_core/src/: lib.rs  renderer.rs
rustines_core/src/arch/: bus.rs  cpu.rs  memory.rs  mod.rs  ppu.rs  rom_structs.rs
rustines_core/src/arch/arch_tests/: branches_test.rs  common.rs  cpu_test.rs  decode_test.rs  lda_test.rs  mod.rs  pushpop_test.rs  test_common.rs
rustines_core/src/arch/instrs/: adc.rs  and.rs  asl.rs  bit.rs  branches.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  flags.rs  inc.rs  instr_table.rs  inx.rs  iny.rs  jmp.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  ora.rs  others.rs  pushpop.rs  rol.rs  ror.rs  sbc.rs  sta.rs  stx.rs  sty.rs  subroutines.rs  transfers.rs
rustines_core/src/arch/mappers/: mapper.rs  mapper_0.rs  mapper_factory.rs  mod.rs
rustines_core/src/loaders/: flat_loader.rs  loader.rs
rustines_core/src/utils/: bit_utils.rs  mod.rs  tls.rs
rustines_debug_commands/: Cargo.toml
rustines_debug_commands/src/: context.rs  main.rs  types.rs
rustines_macro/: Cargo.toml
rustines_macro/src/: lib.rs
src/: context.rs  main.rs
src/arch/: bit_utils.rs  cpu.rs  instr.rs  instr_table.rs  memory.rs  mod.rs  registers.rs  rom_structs.rs
src/arch/arch_tests/: branches_test.rs  common.rs  cpu_test.rs  decode_test.rs  flags_test.rs  lda_test.rs  mod.rs  pushpop_test.rs
src/arch/instrs/: adc.rs  and.rs  asl.rs  bit.rs  branches.rs  cmp.rs  cpx.rs  cpy.rs  dec.rs  dex.rs  dey.rs  eor.rs  flags.rs  inc.rs  instr_table.rs  inx.rs  iny.rs  jmp.rs  lda.rs  ldx.rs  ldy.rs  lsr.rs  mod.rs  ora.rs  others.rs  pushpop.rs  rol.rs  ror.rs  sbc.rs  sta.rs  stx.rs  sty.rs  subroutines.rs  transfers.rs
src/arch/mappers/: mapper.rs  mapper_0.rs  mapper_factory.rs  mod.rs
src/loaders/: flat_loader.rs  loader.rs  loaders_factory.rs  mod.rs  zip_loader.rs
src/utils/: bit_utils.rs  mod.rs  named.rs  other_utils.rs  tls.rs  utils.rs
