[workspace]
members = [
    "crates/rustines_core",
    "crates/rustines",
    "crates/rustines_macro",
    "crates/rustines_debug_commands",
    "crates/pixels_tries"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0.103"
thiserror = "2.0.18"
log = "0.4"
env_logger = "0.11"
