[workspace]
members = [
    "crates/rustines",
    "crates/rustines_core",
    "crates/rustines_debug_commands",
    "crates/rustines_gui_utils",
    "crates/rustines_macro",
    "crates/pixels_tries"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0.103"
thiserror = "2.0.18"
log = "0.4"
env_logger = "0.11"
winit = "0.29"
pixels = "0.17.1"
winit_input_helper = "0.16.0"
