[package]
name = "rustines"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4.8"
env_logger = "0.10.0"
zip = "0.6.2"
arrayref = "0.3.5"
clap = { version = "4.0.29", features = ["derive"] }
lazy_static = "1.4.0"
paste = "1.0.12"
rustines_macro = { path = "../rustines_macro" }