[package]
name = "rustines"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.11"
zip = "8.6"
arrayref = "0.3"
clap = { version = "4.6", features = ["derive"] }
lazy_static = "1.5"
paste = "1.0"
rustines_macro = { path = "../rustines_macro" }

[dev-dependencies]
rand = "0.10"
test-case = "3.1"