[package]
name = "rustines_debug_commands"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
zip = "8.6"
arrayref = "0.3"
lazy_static = "1.5"
paste = "1.0"
clap.workspace = true
rustines_core = { path = "../rustines_core" }

[dev-dependencies]
rand = "0.10"
test-case = "3.1"

[[bin]]
name = "rustines_dbg"
path = "src/main.rs"
