[package]
name = "rustines_debug_commands"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2024"

[dependencies]
log = "0.4"
env_logger = "0.11"
clap.workspace = true
rustines_core = { path = "../rustines_core" }

[[bin]]
name = "rustines_dbg"
path = "src/main.rs"
