[package]
name = "pixels-tries"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2024"

[dependencies]
winit = { workspace = true }
pixels = { workspace = true }
winit_input_helper = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
rustines-gui-utils = { path = "../rustines_gui_utils" }
