[package]
name = "rustines"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2024"
default-run = "rustines"

[dependencies]
winit = "0.30.13"
pixels = "0.17.1"
winit_input_helper = "0.17.0"
log.workspace = true
env_logger.workspace = true
clap = { version = "4.6", features = ["derive"] }
rustines-core = { path = "../rustines_core" }
