[package]
name = "rustines"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2024"
default-run = "rustines"

[dependencies]
winit = { workspace = true }
pixels = { workspace = true }
winit_input_helper = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.6", features = ["derive"] }
rustines-core = { path = "../rustines_core" }
rustines-gui-utils = { path = "../rustines_gui_utils" }
