[package]
name = "rustines-core"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2024"

[dependencies]
zip = "8.6"
arrayref = "0.3"
paste = "1.0"
anyhow.workspace = true
log.workspace = true
rustines-macro = { path = "../rustines_macro" }

[dev-dependencies]
rand = "0.10"
test-case = "3.1"
