[package]
name = "rustines-debug-commands"
version = "0.1.0"
authors = ["DavideCanton <davide.canton5@gmail.com>"]
edition = "2024"

[dependencies]
clap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
log.workspace = true
env_logger.workspace = true
rustines-core = { path = "../rustines_core" }

[[bin]]
name = "rustines_dbg"
path = "src/main.rs"
